<resources>
    <string name="app_name">SchoolDiary</string>
    <string name="subjects_page_title">Предметы</string>
    <string name="lesson">Урок</string>
    <string name="cab">Кабинет</string>
    <string name="science_text">Естественные</string>
    <string name="literature_text">Гуманитарные</string>
    <string name="another_text">Прочие</string>
    <string name="add_subject">Добавить предмет</string>
    <string name="enter_lesson">Введите название предмета</string>
    <string name="enter_cab">Введите кабинет</string>
    <string name="enter_subject">Выберите предмет</string>
    <string name="check_subject">Поставьте тип предмета</string>
    <string name="teacher">Учитель</string>
    <string name="diary_page_title">Раписание</string>
    <string name="about_company_page_title">О разработчике</string>
    <string name="enter_teacher">Введите имя учителя</string>
    <string name="update_subject">Обновить предмет</string>
    <string name="save">Сохранено</string>
    <string name="delete">Удалить</string>
    <string name="homework">Д.З.</string>
    <string name="note">Заметка по предмету:</string>
    <string name="rating">Оценки</string>
    <string name="enter_homework">Введите домашнее задание</string>
    <string name="homework_text">Домашнее задание по предмету:</string>
    <string name="hint_notes_edit_text">Введите заметку</string>
    <string name="homeworking">Домашка</string>
    <string name="OK">ОК</string>
    <string name="cab_number_edit_text">Номер кабинета</string>
    <string name="save_btn_text">Сохранить</string>
    <string name="save_notes">Сохранить</string>
    <string name="edit">Изменить</string>
    <string name="notes">Заметки</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
</resources>