<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:hint="@string/lesson"
                android:layout_margin="@dimen/text_margin" />
        </LinearLayout>

        <EditText
            android:id="@+id/teacher_edit_text"
            android:layout_width="match_parent"
            android:hint="@string/teacher"
            android:layout_margin="@dimen/text_margin"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_margin="@dimen/margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/science_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science_text" />

            <CheckBox
                android:id="@+id/literature_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/literature_text" />

            <CheckBox
                android:id="@+id/another_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/another_text" />
        </RadioGroup>

        <Button
            android:id="@+id/add_subject_button"
            android:text="@string/add_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>
</layout>