<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/text_margin">
            <Button
                android:id="@+id/one_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/one"
                style="?attr/materialButtonOutlinedStyle"/>
            <Button
                android:id="@+id/two_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/two"
                style="?attr/materialButtonOutlinedStyle"/>
            <Button
                android:id="@+id/three_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/three"
                style="?attr/materialButtonOutlinedStyle"/>
            <Button
                android:id="@+id/four_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/four"
                style="?attr/materialButtonOutlinedStyle"/>
            <Button
                android:id="@+id/five_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/five"
                style="?attr/materialButtonOutlinedStyle"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMarks"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_recycler_with_marks"
            android:layout_marginTop="@dimen/margin_top"/>

        <Button
            android:id="@+id/save_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_notes"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            />

    </LinearLayout>
</layout>